# baxter_final_project

./: .gitignore  CMakeLists.txt  README.md  package.xml
computer_vision/: gazibo.launch  rviz.launch
config/: gazebo.world  rviz_config.rviz
docs/: Final Project Documentation.odt  group_1_feedback.html
launch/: debug_ar_track.launch  debug_pose_relay.launch  init_ar_track.launch  init_pose_relay.launch  startup.launch
rviz/: AR.rviz
scripts/: _init_baxter.py  _test_ar_output.py  grip_n_twist.py  gripperControl.py  gripping_and_twisting.py  init_baxter.py  motionControl.py  move2.py  move_ola.py  relayObjPose.py  relay_obj_pose.py  relay_tag_pose.py  save_image.py  sequence.py  sequencer.py
src/: blue_center_finder.py  get_cover_center.py  motionControl.py  move.py  move1.py  move2.py  move_center.py  move_to_center.py  sequencer.py  test.py
srv/: OffsetMove.srv
